Bug 1043843 - Avoid accessing nsIDOMBlob from worker thread. r=dhylands, a=sledru